tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.rs:29:20
   |
29 |     assert_unpin::<Foo>();
   |                    ^^^ within `_::__Unpin<'_>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `_::__Unpin<'_>`
  --> tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.rs:12:1
   |
12 | #[pin_data]
   | ^^^^^^^^^^^
note: required for `Foo` to implement `Unpin`
  --> tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.rs:12:1
   |
12 | #[pin_data]
   | ^^^^^^^^^^^ unsatisfied trait bound introduced here
13 | struct Foo {
   |        ^^^
note: required by a bound in `assert_unpin`
  --> tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.rs:25:20
   |
25 | fn assert_unpin<T: Unpin>() {}
   |                    ^^^^^ required by this bound in `assert_unpin`
   = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.rs:30:20
   |
30 |     assert_unpin::<Bar>();
   |                    ^^^ within `_::__Unpin<'_>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `_::__Unpin<'_>`
  --> tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.rs:18:1
   |
18 | #[pin_data]
   | ^^^^^^^^^^^
note: required for `Bar` to implement `Unpin`
  --> tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.rs:18:1
   |
18 | #[pin_data]
   | ^^^^^^^^^^^ unsatisfied trait bound introduced here
19 | struct Bar {
   |        ^^^
note: required by a bound in `assert_unpin`
  --> tests/ui/compile-fail/pin_data/selfref_lifetime_specialize_unpin.rs:25:20
   |
25 | fn assert_unpin<T: Unpin>() {}
   |                    ^^^^^ required by this bound in `assert_unpin`
   = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
